--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_marginTop="140sp"
+        android:layout_marginBottom="10sp"
+        android:layout_weight="0"
+        app:srcCompat="@drawable/logo"
+        tools:layout_editor_absoluteX="94dp"
+        tools:layout_editor_absoluteY="140dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:fontFamily="@font/roboto"
+        android:text="@string/empresa"
+        android:textAlignment="center"
+        android:textSize="@dimen/letraTitulo" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="220sp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="90sp"
+        android:layout_weight="0"
+        android:fontFamily="@font/roboto"
+        android:text="@string/eslogan"
+        android:textAlignment="center"
+        android:textSize="14sp" />
+
+    <Button
+        android:id="@+id/btnIniciar"
+        android:layout_width="220dp"
+        android:layout_height="60sp"
+        android:layout_marginStart="90sp"
+        android:layout_marginTop="40sp"
+        android:layout_weight="0"
+        android:backgroundTint="@color/colorPrimary"
+        android:fontFamily="@font/roboto"
+        android:text="@string/btnInicio"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+</LinearLayout>
