--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/imageView"
@@ -27,7 +28,8 @@
         android:fontFamily="@font/roboto"
         android:text="@string/empresa"
         android:textAlignment="center"
-        android:textSize="@dimen/letraTitulo" />
+        android:textSize="@dimen/letraTitulo"
+        android:textColor="@color/black"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -38,7 +40,8 @@
         android:fontFamily="@font/roboto"
         android:text="@string/eslogan"
         android:textAlignment="center"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:textColor="@color/black"/>
 
     <Button
         android:id="@+id/btnIniciar"
@@ -51,5 +54,6 @@
         android:fontFamily="@font/roboto"
         android:text="@string/btnInicio"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/white"/>
 </LinearLayout>
