--- a/app/src/main/res/layout/fragment_acabados_inmueble.xml
+++ b/app/src/main/res/layout/fragment_acabados_inmueble.xml
@@ -67,19 +67,34 @@
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_weight="1" />
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_opciones_acabado"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="Guardar"
             android:layout_gravity="center"
-            android:background="@color/colorPrimary"
-            app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
-            app:itemIconTint="@color/white"
-            app:itemTextColor="@color/white"
-            app:menu="@menu/acabados_menu"
-            android:padding="0dp"
-            app:itemPaddingTop="10dp"
-            app:itemPaddingBottom="10dp"/>
-    </LinearLayout>
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            />
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_opciones_acabado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="60dp"
+                app:itemPadding="0dp"
+                android:padding="0dp"
+                android:paddingBottom="0dp"
+                app:itemPaddingTop="5dp"
+                app:itemPaddingBottom="0dp"
+                android:paddingTop="0dp"
+                app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
+                app:itemTextColor="@color/white"
+                app:itemIconTint="@color/white"
+                app:itemBackground="@color/colorPrimary"
+                android:background="@color/colorPrimary"
+                android:layout_gravity="center"
+                android:layout_margin="0dp"
+                app:menu="@menu/acabados_menu" />
+       </LinearLayout>
 </FrameLayout>
