--- a/app/src/main/res/layout/fragment_confirmacion_cita.xml
+++ b/app/src/main/res/layout/fragment_confirmacion_cita.xml
@@ -17,32 +17,23 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
-                android:layout_width="70dp"
-                android:layout_height="40dp"
-                android:background="@android:color/transparent"
-                android:textAlignment="center"
-                app:icon="@drawable/back"
-                app:iconSize="24dp"
-                app:iconTint="@color/black" />
-
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="40dp"
-                android:layout_marginRight="70dp"
-                android:layout_weight="0"
+                android:layout_weight="1"
                 android:src="@drawable/logo" />
         </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="Confirmación de Cita"
             android:textAlignment="center"
             android:textSize="@dimen/letraTitulo"
             android:textStyle="bold"
-            android:layout_marginTop="20dp"/>
+            android:textColor="@color/black"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -70,7 +61,9 @@
             android:textAlignment="center"
             android:textSize="@dimen/letraContenido"
             android:textStyle="italic"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:textColor="@color/black"
+            />
 
         <TextView
             android:layout_width="match_parent"
@@ -80,6 +73,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="@dimen/margenCentrado"
             android:layout_marginRight="@dimen/margenCentrado"
+            android:textColor="@color/black"
             />
         <TextView
             android:layout_width="match_parent"
@@ -89,6 +83,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="@dimen/margenCentrado"
             android:layout_marginRight="@dimen/margenCentrado"
+            android:textColor="@color/black"
             />
         <TextView
             android:layout_width="150dp"
@@ -105,6 +100,7 @@
             />
 
         <Button
+            android:id="@+id/btnInicioAgenda"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:text="Regresar a Inicio"
