--- a/app/src/main/res/layout/fragment_acabados_inmueble.xml
+++ b/app/src/main/res/layout/fragment_acabados_inmueble.xml
@@ -67,16 +67,17 @@
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_weight="1" />
+
         <Button
-            android:layout_width="120dp"
-            android:layout_height="60dp"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/colorPrimary"
-            android:text="Guardar"
+            android:id="@+id/btnGuardarAcabados"
+            android:layout_width="123dp"
+            android:layout_height="65dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            />
+            android:backgroundTint="@color/colorPrimary"
+            android:text="Guardar"
+            android:textColor="@color/white" />
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_opciones_acabado"
                 android:layout_width="match_parent"
