--- a/app/src/main/res/layout/fragment_registro_avaluos.xml
+++ b/app/src/main/res/layout/fragment_registro_avaluos.xml
@@ -36,7 +36,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
-        android:id="@+id/textView6_av"
+        android:id="@+id/tv_Titulo"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -57,7 +57,7 @@
         android:layout_marginTop="20dp"/>
 
     <TextView
-        android:id="@+id/textView7_av"
+        android:id="@+id/tv_Descripcion"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -72,22 +72,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">+
+        android:orientation="horizontal"
+        android:gravity="center">
         <TextView
             android:id="@+id/tvFolio_av"
-            android:layout_width="180dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="0"
-            android:gravity="center"
-            android:text="Folio"
+            android:textAlignment="textEnd"
+            android:paddingEnd="10dp"
+            android:text="Folio:"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/folio1_av"
-            android:layout_width="180dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/roboto"
@@ -122,6 +123,26 @@
         android:layout_marginTop="20dp"
         android:textColor="@color/white"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text="Aprobar avalúo"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <CheckBox
+            android:id="@+id/cbx_Aprobar"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+    </LinearLayout>
 </LinearLayout>
 
 </LinearLayout>
