--- a/app/src/main/res/layout/lista_acabados.xml
+++ b/app/src/main/res/layout/lista_acabados.xml
@@ -4,27 +4,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="2dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/txtName"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="16sp"
             android:layout_gravity="center"
             android:layout_marginStart="30dp"
-            />
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
         <CheckBox
             android:id="@+id/checkBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginEnd="30dp"/>
-    </LinearLayout>
+            android:layout_marginEnd="30dp" />
 
+    </LinearLayout>
 
 </RelativeLayout>
