--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -37,12 +37,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="290dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginRight="100dp"
+                android:layout_marginLeft="80dp"
+                android:layout_marginRight="80dp"
                 android:fontFamily="@font/roboto"
                 android:text="Se determina el precio de la propiedad de acuerdo a sus características"
                 android:textAlignment="center"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textSize="20dp"/>
 
         </RelativeLayout>
 
