--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,10 +74,21 @@
         android:textAlignment="center"
         android:text="@string/hint"
         android:textColor="@color/colorLink"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/roboto"
+        android:textSize="14sp" />
+    <TextView
+        android:id="@+id/tvError"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text=""
+        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/roboto"
         android:textSize="14sp"
-         />
+        />
 
     <Button
         android:id="@+id/btnIniciarSesion"
