v1 Unión de todas las pantallas y corrección de funcionalidad

--- a/app/src/main/res/layout/fragment_agendar_cita.xml
+++ b/app/src/main/res/layout/fragment_agendar_cita.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,13 +15,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
+            <Button
+                android:id="@+id/btnRegresarCita"
+                android:layout_width="70dp"
+                android:layout_height="40dp"
+                android:background="@android:color/transparent"
+                android:textAlignment="center"
+                app:icon="@drawable/back"
+                app:iconSize="24dp"
+                app:iconTint="@color/black" />
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="0"
                 android:src="@drawable/logo" />
+
+
         </LinearLayout>
 
         <LinearLayout
