--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -38,6 +38,7 @@
         android:fontFamily="@font/roboto"
         android:hint="Usuario"
         android:inputType="text"
+        android:maxLength="40"
         android:text=""
         android:textColor="@color/black" />
 
@@ -52,6 +53,7 @@
         android:fontFamily="@font/roboto"
         android:hint="Contraseña"
         android:inputType="textPassword"
+        android:maxLength="20"
         android:text=""
         android:textColor="@color/black" />
 
@@ -65,6 +67,7 @@
         android:fontFamily="@font/roboto"
         android:hint="Confirmar contraseña"
         android:inputType="textPassword"
+        android:maxLength="20"
         android:text=""
         android:textColor="@color/black" />
 
@@ -79,6 +82,7 @@
         android:fontFamily="@font/roboto"
         android:hint="Telefono"
         android:inputType="text"
+        android:maxLength="10"
         android:textColor="@color/black" />
 
     <EditText
@@ -91,6 +95,7 @@
         android:fontFamily="@font/roboto"
         android:hint="Email"
         android:inputType="text"
+        android:maxLength="255"
         android:text=""
         android:textColor="@color/black" />
     <TextView
