--- a/app/src/main/res/layout/fragment_citas.xml
+++ b/app/src/main/res/layout/fragment_citas.xml
@@ -38,6 +38,60 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/lista_avaluos" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/tvNombreCita"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="Nombre"
+            android:textColor="@color/black"
+            android:textSize="@dimen/letraContenido"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/tvFechaCita"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="Fecha"
+            android:textColor="@color/black"
+            android:textSize="@dimen/letraContenido"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tvEstatusCita"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="Estatus"
+            android:textColor="@color/black"
+            android:textSize="@dimen/letraContenido"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tvAccionesCita"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="Acciones"
+            android:textColor="@color/black"
+            android:textSize="@dimen/letraContenido"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listaCitas"
