--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -12,4 +12,7 @@
     <item android:id="@+id/bottom_informacion"
         android:title="Ayuda"
         android:icon="@drawable/informacion_black"/>
+    <item android:id="@+id/bottom_salir"
+        android:title="Salir"
+        android:icon="@drawable/salir"/>
 </menu>
