--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,9 @@
         android:hint="Correo"
         android:inputType="text"
         android:maxLength="255"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:drawableStart="@drawable/correo"
+        />
 
     <EditText
         android:id="@+id/et_password"
@@ -66,7 +68,9 @@
         android:hint="@string/phPassw"
         android:inputType="textPassword"
         android:maxLength="30"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:drawableStart="@drawable/contra"
+        />
 
     <TextView
         android:id="@+id/textView3"
@@ -84,7 +88,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text=""
-        android:textColor="@color/black"
+        android:textColor="@color/colorDelete"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/roboto"
